Afegir funció de API, obtenir entrades de un dia per un usuari #27
