# queesticfent-api-externa/src/main/java/org/fundaciobit/queesticfent/api/externa/secure/modificacions/AddModificacioRequest.java
@@ -7,7 +7,7 @@ import java.util.Date;
  * @author anadal
  *
  */
-public class Modificacio {
+public class AddModificacioRequest {
     
     protected String language;
     
